added ability to edit stuffs

--- a/HTML/boardpage.html
+++ b/HTML/boardpage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../CSS/boardpage.css">
     <title>Brello Board</title>
 </head>
-<body>
+<body class="">
     <div class="largelistcontainer"></div>
     <div class="listcontainerinput">
         <span1 class="listinput" id="listinputtitle" role="textbox" contenteditable>Title</span1>
