added some cool stuff

--- a/HTML/boardpage.html
+++ b/HTML/boardpage.html
@@ -14,8 +14,11 @@
         <br>
         <button class="listinputbutton" id="createbutton" type="button">+</button>
     </div>
-    <button class="darkmodebutton" type="button">🌙</button>
-    <button class="homebutton" type="button">🏠</button>
+    <div class="bottomrightbuttons">
+        <button class="darkmodebutton" type="button">🌙</button>
+        <button class="homebutton" type="button">🏠</button>
+        <button class="settingsbutton" type="button">⚙️</button>
+    </div>
 </body>
 <script src="../JS/boardpage.js" type="module"></script>
 <script type="module">
