--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -16,7 +16,7 @@
         <button class="boardinputbutton" id="createbutton" type="button">+</button>
     </div>
     <button class="darkmodebutton" type="button">🌙</button>
-    <span class="bottomtext" role="textbox">Brello</span>
+    <span class="bottomtext" role="textbox">Brello (Alpha)</span>
 </body>
 <script src="../JS/homepage.js" type="module"></script>
 <script type="module">
